SDKs/twilio.com/twilio_oauth_v1/1.37.4/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateTokenRequest{
        Security: operations.CreateTokenSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        Request: &operations.CreateTokenCreateTokenRequest{
            ClientSecret: "sit",
            ClientSid: "voluptas",
            Code: "culpa",
            CodeVerifier: "expedita",
            DeviceCode: "consequuntur",
            DeviceID: "dolor",
            GrantType: "expedita",
            RefreshToken: "voluptas",
        },
    }
    
    res, err := s.CreateToken(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.OauthV1Token != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateToken` - Issues a new Access token (optionally identity_token & refresh_token) in exchange of Oauth grant
* `FetchCerts` - Fetches public JWKs
* `FetchOpenidDiscovery` - Fetch configuration details about the OpenID Connect Authorization Server
* `FetchUserInfo` - Retrieves the consented UserInfo and other claims about the logged-in subject (end-user).

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
